--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,19 @@
-# Environment / secrets
-.env
-env_base
-
-# Databases
-*.db
-*.sqlite
-
-# Python cache / build artifacts
-__pycache__/
-*.py[cod]
-*.pyo
-
-# Virtual environments
+# 가상환경
 .venv/
-venv/
-ENV/
 
-# Tooling caches
-.mypy_cache/
-.pytest_cache/
-.ruff_cache/
+# vscode 설정 파일
+.vscode/
 
-# Local storage artifacts
-storage/
+# 캐시/로그
+__pycache__/
+*.pyc
+*.log
+
+# 환경 변수 파일
+.env
+
+# 데이터베이스 파일
+*.sqlite3
+*.sqlite3-shm
+*.sqlite3-wal
+*.db
