--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "passlib (>=1.7.4,<2.0.0)",
     "bcrypt (>=5.0.0,<6.0.0)",
     "python-jose[cryptography] (>=3.5.0,<4.0.0)",
+    "aiofiles (>=25.1.0,<26.0.0)",
 ]
 
 
