--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,12 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard] (>=0.119.1,<0.120.0)",
-    "tortoise-orm[psycopg] (>=0.25.1,<0.26.0)",
     "passlib (>=1.7.4,<2.0.0)",
     "bcrypt (>=5.0.0,<6.0.0)",
     "python-jose[cryptography] (>=3.5.0,<4.0.0)",
     "aiofiles (>=25.1.0,<26.0.0)",
+    "tortoise-orm (>=0.25.1,<0.26.0)",
+    "openpyxl (>=3.1.5,<4.0.0)",
 ]
 
 
