--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "aiofiles (>=25.1.0,<26.0.0)",
     "tortoise-orm (>=0.25.1,<0.26.0)",
     "openpyxl (>=3.1.5,<4.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)",
 ]
 
 
